--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/node": "^7.2.2",
         "@babel/plugin-proposal-class-properties": "^7.2.3",
         "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/plugin-transform-modules-commonjs": "^7.2.0",
         "@babel/plugin-transform-typescript": "^7.2.0",
         "@babel/preset-env": "^7.2.3",
